# ibmi-mcp-server-lite

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pom.xml
.github/workflows/: build.yml  rpm-ibmi.yml  rpm-local-check.yml
docs/: intern-roadmap.md  roadmap.md  running-on-ibmi.md  yaml-tools-reference.md
docs/research/: ibmi-rpm-pipeline.md  mapepire-java-sdk.md  mcp-java-sdk.md  yaml-schema-contract.md
packaging/ibmi/: ibmi-mcp-server-lite.sh  service-commander-def.yaml
packaging/rpm/: ibmi-mcp-server-lite.spec
sandbox/mcp-cli/: .env.example  README.md  pyproject.toml
sandbox/mcp-cli/src/ibmi_mcp_client/: __init__.py  __main__.py  cli.py  config.py  output.py
scripts/: rpm-build-check.sh  smoke-test.py
src/main/java/com/ibm/ibmi/mcp/: Main.java
src/main/java/com/ibm/ibmi/mcp/config/: ConfigException.java  JdbcOptionsParser.java  MergeOptions.java  ParameterConfig.java  SecurityConfig.java  SourceConfig.java  SqlToolConfig.java  ToolsConfig.java  ToolsetConfig.java  YamlConfigLoader.java
src/main/java/com/ibm/ibmi/mcp/format/: MarkdownBuilder.java  SqlFormattingUtils.java  SqlMarkdownFormatter.java  TableFormatter.java
src/main/java/com/ibm/ibmi/mcp/mapepire/: JdbcOptionsMapper.java  MapepireFailures.java  SourceManager.java
src/main/java/com/ibm/ibmi/mcp/schema/: JsonSchemaBuilder.java
src/main/resources/: simplelogger.properties
src/test/java/com/ibm/ibmi/mcp/: GracefulShutdownTest.java  MainTest.java  TransportConfigTest.java
tools/: sample-tools.yaml
(+42 files in other folders)
